- move config to each files - light theme only - backward compatible with tiles - not include lib

--- a/lib/_index.scss
+++ b/lib/_index.scss
@@ -1,233 +1,21 @@
 @charset "utf-8";
-@use "sass:math";
 
-// custom variables, functions, mixins
 @use "./utilities/variables";
 
-$section-gap: 24px !default;
-$input-color: variables.$text !default;
-$arrow-color: variables.$grey !default;
-
-// bulma utilities
-@forward "bulma/sass/utilities/initial-variables" with ( 
-  // Spacing
-  $block-spacing: variables.$block-spacing,
-
-  // Weight
-  $weight-light: variables.$weight-light,
-  $weight-normal: variables.$weight-normal,
-  $weight-medium: variables.$weight-medium,
-  $weight-semibold: variables.$weight-semibold,
-  $weight-bold: variables.$weight-bold,
-
-  // Miscellaneous
-  $easing: variables.$easing,
-  $radius-small: variables.$radius-small,
-  $radius: variables.$radius,
-  $radius-large: variables.$radius-large,
-  $radius-rounded: variables.$radius-rounded,
-  $speed: variables.$speed,
-
-  // Black and White
-  $black: variables.$black,
-  $black-bis: variables.$black-bis,
-  $black-ter: variables.$black-ter,
-  $grey-darker: variables.$grey-darker,
-  $grey-dark: variables.$grey-dark,
-  $grey: variables.$grey,
-  $grey-light: variables.$grey-light,
-  $grey-lighter: variables.$grey-lighter,
-  $grey-lightest: variables.$grey-lightest,
-  $white-ter: variables.$white-ter,
-  $white-bis: variables.$white-bis,
-  $white: variables.$white,
-
-  // The container horizontal gap, which acts as the offset for breakpoints
-  $gap: $section-gap !default,
-
-  // Responsiveness
-  $tablet: variables.$tablet,
-  $desktop: variables.$desktop,
-  $widescreen: variables.$widescreen,
-  $widescreen-enabled: variables.$widescreen-enabled,
-  $fullhd: variables.$fullhd,
-  $fullhd-enabled: variables.$fullhd-enabled,
-
-  // Flags
-  $variable-columns: false !default,
-);
-
-// @forward "bulma/sass/utilities/functions";
-
-@forward "bulma/sass/utilities/derived-variables" with ( 
-  // Font family
-  $family-primary: variables.$font-family !default,
-  $family-secondary: variables.$font-family !default,
-  $family-code: variables.$font-family !default,
-
-  // Font size
-  $size-small: variables.$size-small,
-  $size-normal: variables.$size-normal,
-  $size-medium: variables.$size-medium,
-  $size-large: variables.$size-large,
-
-  // Meaning Colors
-
-  // General colors
-  $scheme-main: variables.$scheme-main,
-  $scheme-main-bis: variables.$scheme-main-bis,
-  $scheme-main-ter: variables.$scheme-main-ter,
-  $scheme-invert: variables.$scheme-invert,
-  $scheme-invert-bis: variables.$scheme-invert-bis,
-  $scheme-invert-ter: variables.$scheme-invert-ter,
-
-  $background: variables.$background,
-  $border: variables.$border,
-  $border-weak: variables.$border-weak,
-
-  // Text colors
-  $text: variables.$text,
-  $text-invert: variables.$text-invert,
-  $text-weak: variables.$text-weak,
-  $text-strong: variables.$text-strong,
-
-  // Default colors
-  $primary: variables.$primary,
-  $info: variables.$info,
-  $success: variables.$success,
-  $warning: variables.$warning,
-  $danger: variables.$danger,
-  $light: variables.$light,
-  $dark: variables.$dark,
-
-  // Link colors
-  $link: variables.$link,
-
-  // Colors & Shades
-  $custom-colors: variables.$custom-colors,
-  $custom-shades: variables.$custom-shades,
-  $colors: variables.$colors,
-  $shades: variables.$shades,
-);
-
-@forward "bulma/sass/utilities/controls" with (
-  $control-height: variables.$control-height,
-  $control-line-height: variables.$control-line-height,
-  $control-padding-vertical: calc(0.25em - 1px) !default,
-);
-
-// bulma others: order by https://github.com/jgthms/bulma/blob/main/sass/_index.scss
-
-@forward "bulma/sass/themes";
-
-@forward "bulma/sass/base" with (
-  $body-background-color: variables.$body-background-color,
-
-  // Root element size to calculate rem (in pixel)
-  $body-size: 10px !default,
-);
-
-@forward "bulma/sass/elements" with (
-  $button-weight: variables.$weight-normal !default,
-  $button-padding-vertical: 0 !default,
-  $button-padding-horizontal: 2em !default,
-
-  $box-radius: variables.$radius-large !default,
-  $box-shadow: none !default,
-  $box-padding: 2rem !default,
-
-  $icon-text-spacing: variables.$brick-spacing !default,
-
-  $table-color: variables.$text !default,
-  $table-striped-row-even-background-color: variables.$scheme-main-bis !default,
-  $table-striped-row-even-hover-background-color: variables.$scheme-main-ter !default,
-);
-
-@forward "bulma/sass/form" with (
-  $label-color: variables.$text-strong !default,
-  $label-weight: variables.$weight-bold !default,
-  $input-placeholder-color: variables.$text-placeholder !default,
-  $input-disabled-color: variables.$text-disabled !default,
-  $input-disabled-placeholder-color: invalid !default,
-  $input-disabled-background-color: variables.$background !default,
-  $input-disabled-border-color: variables.$border !default,
-  $input-h: hue($input-color) !default,
-  $input-s: saturation($input-color) !default,
-  $input-l: lightness($input-color) !default,
-  $input-arrow: $arrow-color !default,
-  $input-icon-color: variables.$text !default,
-);
-
-@forward "bulma/sass/components" with (
-  $modal-content-width: 640px !default,
-  $modal-content-margin-mobile: 20px !default,
-  $modal-content-spacing-mobile: 160px !default,
-  $modal-content-spacing-tablet: 40px !default,
-  $modal-close-dimensions: 40px !default,
-  $modal-close-right: 20px !default,
-  $modal-close-top: 20px !default,
-  $modal-card-spacing: 40px !default,
-  $modal-card-head-padding: 1.2rem !default,
-  $modal-card-title-size: variables.$size-medium !default,
-
-  $navbar-item-img-max-height: max(30px, variables.$navbar-height - 10px) !default,
-  $navbar-dropdown-border-style: none !default,
-  $navbar-dropdown-arrow: $arrow-color !default,
-
-  $pagination-disabled-color: variables.$text-disabled !default,
-
-  // config at variables.scss
-  $modal-breakpoint: variables.$modal-breakpoint,
-  $modal-z: variables.$modal-z,
-  $navbar-breakpoint: variables.$navbar-breakpoint,
-  $navbar-height: variables.$navbar-height,
-);
-
-@forward "bulma/sass/grid" with (
-  $column-gap: math.div(variables.$block-spacing, 2) !default,
-);
-
-@forward "bulma/sass/layout" with (
-  $section-padding: (variables.$block-spacing * 2) $section-gap !default,
-  $section-padding-desktop: (variables.$block-spacing * 2) $section-gap !default, // desktop only
-  $section-padding-medium: (variables.$block-spacing * 3) $section-gap !default, // desktop only
-  $section-padding-large: (variables.$block-spacing * 6) $section-gap !default, // desktop only
-);
-
-@forward "bulma/sass/base/skeleton";
-
-// bulma helpers
-@forward "bulma/sass/helpers/aspect-ratio";
-@forward "bulma/sass/helpers/border";
-// @forward "bulma/sass/helpers/color"; // rewrite
-// @forward "bulma/sass/helpers/flexbox"; // rewrite
-// @forward "bulma/sass/helpers/float"; // remove
-@forward "bulma/sass/helpers/gap";
-// @forward "bulma/sass/helpers/overflow"; // rewrite
-@forward "bulma/sass/helpers/position";
-@forward "bulma/sass/helpers/spacing" with ( // Spacing
-  $spacing-shortcuts: ("margin": "push", "padding": "pad") !default,
-  $spacing-directions: ("top": "-top", "right": "-right", "bottom": "-bottom", "left": "-left") !default,
-  $spacing-horizontal: "-x" !default,
-  $spacing-vertical: "-y" !default,
-  $spacing-values: ("0": 0, "1": variables.$square-size, "2": variables.$square-size * 2, "3": variables.$square-size * 3, "4": variables.$square-size * 4, "5": variables.$square-size * 5, "6": variables.$square-size * 6) !default,
-);
-// @forward "bulma/sass/helpers/typography"; // rewrite
-@forward "bulma/sass/helpers/visibility";
-@forward "bulma/sass/helpers/other";
-
-// custom others
+@forward "./utilities";
+@forward "./themes";
 @forward "./base";
-@forward "./layout";
-@forward "./element";
-@forward "./components";
+@forward "./elements";
+@forward "./shape"; // new
 @forward "./form";
-@forward "./shape";
+@forward "./components";
+@forward "./grid";
+@forward "./layout";
+@forward "./base/skeleton";
 @forward "./helpers";
-@forward "./lib";
 
 :root {
-  --bulma-arrow-color: #{$arrow-color};
+  --bulma-arrow-color: #{variables.$arrow-color};
   --bulma-link-text: #{variables.$link};
   --bulma-focus-shadow-size: 0 0 0 0;
 }
