--- a/lib/components/_index.scss
+++ b/lib/components/_index.scss
@@ -1,5 +1,12 @@
 @charset "utf-8";
 
+@forward "./breadcrumb";
+@forward "./card";
+@forward "./dropdown";
+@forward "./menu";
+@forward "./message";
 @forward "./modal";
 @forward "./navbar";
-@forward "./tab";
+@forward "./pagination";
+@forward "./panel";
+@forward "./tabs";
