--- a/lib/layout/_index.scss
+++ b/lib/layout/_index.scss
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
 @forward "./container";
+@forward "./footer";
+@forward "./hero";
+@forward "./level";
+@forward "./media";
 @forward "./section";
-@forward "./tile";
