--- a/lib/utilities/variables.scss
+++ b/lib/utilities/variables.scss
@@ -172,6 +172,9 @@ $shades: mergeColorMaps((
 $vertical-scrollbar-width: 17px !default;
 
 // Others
+$input-color: $text !default;
+$arrow-color: $grey !default;
+$section-gap: 24px !default;
 $navbar-height: 0 !default;
 $modal-z: 1020 !default;
 
