--- a/lib/components/modal.scss
+++ b/lib/components/modal.scss
@@ -1,5 +1,23 @@
 @use "../utilities/variables";
 @use "bulma/sass/utilities/mixins" as bulma-mx;
+
+@forward "bulma/sass/components/modal" with (
+  $modal-content-width: 640px !default,
+  $modal-content-margin-mobile: 20px !default,
+  $modal-content-spacing-mobile: 160px !default,
+  $modal-content-spacing-tablet: 40px !default,
+  $modal-close-dimensions: 40px !default,
+  $modal-close-right: 20px !default,
+  $modal-close-top: 20px !default,
+  $modal-card-spacing: 40px !default,
+  $modal-card-head-padding: 1.2rem !default,
+  $modal-card-title-size: variables.$size-medium !default,
+
+  // config directly at variables.scss
+  $modal-breakpoint: variables.$modal-breakpoint,
+  $modal-z: variables.$modal-z,
+);
+
 @use "bulma/sass/components/modal" as bulma-modal;
 @use "bulma/sass/elements/box" as bulma-box;
 
