--- a/lib/helpers/other.scss
+++ b/lib/helpers/other.scss
@@ -3,6 +3,8 @@
 @use "../utilities/mixins" as mx;
 @use "../form/shared" as form-shared;
 
+@forward "bulma/sass/helpers/other";
+
 $box-shadow-for-has-shadow: 0 2px 3px rgba(variables.$black, 0.1), 0 0 0 1px rgba(variables.$black, 0.1) !default;
 $box-shadow-for-has-shadow-hovered: 1px 3px 10px 2px rgba(variables.$black, 0.1), 0 0 0 1px rgba(variables.$black, 0.1) !default;
 
