--- a/lib/_index.scss
+++ b/lib/_index.scss
@@ -12,6 +12,8 @@
 @forward "./grid";
 @forward "./layout";
 @forward "./base/skeleton";
+@forward "./base/non-responsive-mobile";
+@forward "./base/non-responsive-tablet";
 @forward "./helpers";
 
 :root {
