--- a/lib/base/_index.scss
+++ b/lib/base/_index.scss
@@ -7,5 +7,6 @@
 
 // new
 @forward "./elements-spacing";
-@forward "./non-responsive-mobile";
-@forward "./non-responsive-tablet";
+// forward as last
+// @forward "./non-responsive-mobile";
+// @forward "./non-responsive-tablet";
