--- a/lib/grid/columns.scss
+++ b/lib/grid/columns.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+@use "bulma/sass/utilities/mixins" as bulma-mx;
 @use "../utilities/variables";
 
 @forward "bulma/sass/grid/columns" with (
@@ -7,7 +8,10 @@
 
 @use "bulma/sass/grid/columns" as bulma-columns;
 
-// column
+// Spacing
+$column-gap-mobile: math.div(variables.$block-spacing-mobile, 2) !default;
+
+// Spacing
 .columns {
   &:not(:last-child) {
     margin-bottom: variables.$block-spacing - bulma-columns.$column-gap;
@@ -15,6 +19,29 @@
   &.is-gapless {
     &:not(:last-child) {
       margin-bottom: variables.$block-spacing;
+    }
+  }
+}
+
+@include bulma-mx.mobile {
+  .column {
+    padding: $column-gap-mobile;
+  }
+
+  .columns {
+    margin-left: (-$column-gap-mobile);
+    margin-right: (-$column-gap-mobile);
+    margin-top: (-$column-gap-mobile);
+    &:last-child {
+      margin-bottom: (-$column-gap-mobile);
+    }
+    &:not(:last-child) {
+      margin-bottom: variables.$block-spacing-mobile - $column-gap-mobile;
+    }
+    &.is-gapless {
+      &:not(:last-child) {
+        margin-bottom: variables.$block-spacing-mobile;
+      }
     }
   }
 }
