--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div class="navbar-brand">
       <a
         class="navbar-item"
-        href="/"
+        [routerLink]="['/']"
       >
         <div class="block is-flex is-align-end">
           <img
