--- a/web/src/app/form/checkbox.component.html
+++ b/web/src/app/form/checkbox.component.html
@@ -19,6 +19,24 @@
       </label>
     </div>
 
+    <div class="block">
+      <label class="checkbox push-right-1">
+        <input
+          type="checkbox"
+          checked
+          disabled
+        >
+        <span>Checked Disabled</span>
+      </label>
+      <label class="checkbox">
+        <input
+          type="checkbox"
+          disabled
+        >
+        <span>Unchecked Disabled</span>
+      </label>
+    </div>
+
     <h2 class="title is-3">Modifier</h2>
 
     <div class="block">
