--- a/web/src/app/form/radio.component.html
+++ b/web/src/app/form/radio.component.html
@@ -29,6 +29,24 @@
       </label>
     </div>
 
+    <div class="block">
+      <label class="radio">
+        <input
+          type="radio"
+          checked
+          disabled
+        >
+        <span>Checked Disabled</span>
+      </label>
+      <label class="radio">
+        <input
+          type="radio"
+          disabled
+        >
+        <span>Unchecked Disabled</span>
+      </label>
+    </div>
+
     <h2 class="title is-3">Modifier</h2>
 
     <div class="block">
