--- a/lib/form/shared.scss
+++ b/lib/form/shared.scss
@@ -16,3 +16,4 @@
 $input-arrow-size: 0.625em !default;
 $input-arrow-right: 0.625em !default;
 $input-arrow-border-width: 1px !default;
+$input-disabled-checked-color: variables.$text-disabled !default;
